--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.6.3",
+    "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
+    "react-native-web": "^0.9.9",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
